tests/src/frontend/typechecking/invalid/unimplementable_conditional_method_4.sk
trait XShow {
  readonly fun xtoString(): String;
}

base class XList<+T> uses XShow[T: XShow] {
  children =
  | XNil()
  | XCons(hd: T, tl: XList<T>)
}
